browser-warning: don't check for navigator.mediaDevices as these are only required for the qr scanner but blocked the apps from being available in iOS webviews (e.g. in twitter app or facebook app); improve style of warnings

--- a/browser-warning/browser-warning.html.template
+++ b/browser-warning/browser-warning.html.template
@@ -1,7 +1,19 @@
 <noscript>
-    Please enable Javascript.
     <style>
-        body > :not(noscript) {display: none !important;}
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-image: linear-gradient(30deg, #3023AE, #9C58CB);
+            height: 100vh;
+            max-height: 100%;
+        }
+        body > * {
+            display: none !important;
+        }
+        body::after {
+            content: 'Please enable Javascript.';
+        }
     </style>
 </noscript>
 <!-- @asset(/elements/browser-warning/browser-warning.js) -->
